# anthroshim

./: .dockerignore  .template.env  0_build.txt  AGENTS.md  AnthropicMessage.md  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  ResponsesAPI.md  compose.yml  dev.md  model-map.yml  pyproject.toml
.github/workflows/: ghcr-build.yml
src/: test-cc.py
src/api_transformer/: __init__.py  anthropic_to_openai.py  cli.py  config.py  openai_stream_to_anthropic_stream.py  openai_to_anthropic.py  server.py
tests/: conftest.py  test_model_mapping.py  test_openai_stream_to_anthropic_stream.py  test_upstream_responses_api.py
