[project]
name = "api-transformer"
version = "0.1.0"
description = "Transform OpenAI Responses API payloads/streams into Anthropic Messages format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.76.0",
  "claude-agent-sdk>=0.1.24",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "load-dotenv>=0.1.0",
  "pip>=25.3",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.3",
  "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_transformer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
